# tordle

./: README.md  makefile  pyproject.toml
tests/: test_check.py  test_session.py  test_tordle.py  test_wordlist.py
tordle/: check.py  render.py  session.py  tordle.py  util.py  widgets.py  word_list.py
